--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "project1",
   "version": "1.0.0",
   "description": "Photography blog",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nic Boutte",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.0",
     "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
