--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^0.8.0",
     "body-parser": "^1.10.0",
+    "chai": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
     "express": "^4.10.4",
