--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "chai": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "ejs": "^1.0.0",
-    "express": "^4.10.4",
+    "express": "latest",
     "express-session": "^1.9.3",
     "method-override": "^2.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "path": "^0.4.9",
-    "pg": "^4.1.0",
+    "pg": "4.x",
     "session": "^0.1.0"
   }
 }
